<resources>
    <string name="app_name" translatable="false">Locus - OUT FIT</string>

    <!-- SpannedDeviceDisplay -->
    <string name="infit" translatable="false">Locus - IN FIT</string>

    <!-- activity_main.xml -->
    <string name="activity_main_label" translatable="false">OUT FIT - Export</string>
    <string name="btn_directory_picker">Select export folder</string>
    <string name="root_folder_label">Export folder:</string>
    <string name="stats_label">Stats:</string>
    <string name="not_set">Not yet set</string>
    <string name="filename_label">Filename:</string>
    <string name="filename_hint">filename</string>
    <string name="btn_export">Export</string>
    <string name="btn_extra">Export options</string>

    <string name="bundle_label">Bundle navigation hints?</string>
    <string name="move_label">Move navigation hints?</string>
    <string name="in_meters">[metres]</string>


    <!-- activity_finish_gracefully.xml -->
    <string name="what_happened">What happened:</string>

    <!-- MainActivity.kt DirectoryChooserConfig-->
    <string name="new_directory_name" translatable="false">OUT_FIT_data</string>

    <!-- MainActivity.kt default filename no extension-->
    <string name="default_filename" translatable="false">outfit_export</string>

    <!-- MainActivity.kt toast messages-->
    <string name="permission_needed">Permission is needed</string>
    <string name="locus_not_installed">Locus is not installed!</string>
    <string name="required_version_missing">Locus is probably too old!</string>
    <string name="locus_not_running">Locus is not running</string>
    <string name="bt_may_be_needed">Bluetooth is off.</string>
    <string name="logs_written" translatable="false">Debug logs written</string>
    <string name="logs_write_error" translatable="false">Debug logs write error</string>

    <!-- Stats.kt-->
    <string name="name_stats">Track name:</string>
    <string name="length_stats">Track length:</string>
    <string name="nmb_points_stats">Number of points:</string>
    <string name="nmb_waypoints_stats">Number of waypoints:</string>

    <!-- speed_fragment.xml-->
    <string name="frag_label_speed">Virt. partner\'s speed?</string>
    <string name="frag_label_activity_type">ActivityType: </string>
    <string name="kmh" translatable="false">km/h</string>
    <string name="mph" translatable="false">mph</string>
    <string name="frag_label_time_to_complete_course">It\'s going to take:</string>
    <string name="hours">hrs</string>
    <string name="minutes">min</string>
    <string name="speed">speed</string>

    <string name="seconds">sec.</string>

    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="later">Later</string>

    <string name="start">Start</string>
    <string name="finish">Finish</string>

    <string name="strava_segments">Strava segments:</string>

    <!-- shared preferences -->
    <string name="main_activity_preferences" translatable="false">radim.outfit.MainActivity</string>
    <string name="last_seen_speed_value_m_s" translatable="false">value_for_duration_picker</string>
    <string name="last_seen_speed_units_string" translatable="false">units_in_speed_picker-string_reference</string>
    <string name="last_seen_root" translatable="false">last_seen_root_directory</string>
    <string name="checkbox_cciq" translatable="false">checkbox_enabling_cc_iq</string>

    <!-- public messages  - Encode-->
    <string name="course_name">Course name:</string>
    <string name="filename">Filename:</string>
    <string name="exported">What\'s been exported:</string>
    <string name="course_has_elevation_yes">This course has elevation data.</string>
    <string name="course_has_elevation_no">This course has no elevation data.</string>

    <!-- ViewResultsActivity -->
    <string name="activity_view_results_label">OUT FIT - Share</string>
    <string name="btn_share_course">Share course</string>
    <string name="imgview_connectiq_desc" translatable="false">ConnectIQ logo</string>
    <string name="bluetooth_status_icon">Bluetooth status icon</string>
    <string name="nmb_trackpoints">Number of trackpoints:</string>
    <string name="nmb_coursepoints">Number of coursepoints:</string>
    <string name="found_devices_label">Found devices:</string>
    <string name="found_companion">. IN FIT, the companion app: </string>
    <string name="fetching_segments">Fetching Strava segments.</string>
    <string name="detecting_summits">Detecting summits and valleys.</string>

    <string name="est_download_time">Estimated CIQ download time (over BLE):</string>

    <string name="how_to_use_infit">Please keep OUT FIT in foreground and use IN FIT on</string>
    <string name="waiting_for_a_device_connected">Waiting for a CIQ device connected.</string>
    <string name="ciq_service_off">CIQ service is off.</string>
    <string name="device">device</string>
    <string name="zero_length_buffer">No exported files found. No CIQ service.</string>
    <string name="ciqservice_generic_error">CIQ service error.</string>
    <string name="courses">Serving courses:</string>


    <!-- ViewResultsActivity - default parcel -->
    <string name="default_parcel1">Welcome!</string>
    <string name="default_parcel2">Currently, there are no exported courses.</string>

    <string name="explain_track_tools_menu">Where to find OUT FIT in Locus</string>


    <!-- ViewResultsActivity - error parcel -->
    <string name="error_parcel1">Database error :-(</string>
    <string name="error_parcel2">Deleting app data in settings should solve this.</string>

    <!-- Locus dir pick-->
    <string name="pick_dir_message">Select export folder</string>

    <!-- FileProvider / ViewResultActivity-->
    <string name="share_single">Share course</string>

    <!-- Dialogs to prompt user to install or update IN FIT / ViewResultsActivity -->
    <string name="infit_dialog_infit_not_installed_message">IN FIT, the ConnectIQ companion App is not installed on</string>
    <string name="infit_dialog_infit_old_version">IN FIT, the ConnectIQ companion App is an old version on</string>
    <string name="infit_dialog_never_ask_again">Never ask again</string>
    <string name="infit_dialog_take_me_to_the_store">Take me to the ConnectIQ store</string>

    <!--
install_needed_title — Dialog title for when Garmin Connect Mobile needs to be installed.
install_needed_message — Dialog message for when Garmin Connect Mobile needs to be installed.
install_needed_yes — Button text for user to confirm they want to visit the Google Play Store to install Garmin Connect Mobile.
install_needed_cancel — Button text for user to cancel the dialog and not install Garmin Connect Mobile.
upgrade_needed_title — Dialog title for when Garmin Connect Mobile needs to be upgraded to a version that supports the SDK.
upgrade_needed_message — Dialog message for when Garmin Connect Mobile needs to be upgraded to a version that supports the SDK.
upgrade_needed_yes — Button text for user to confirm they want to visit the Google Play Store to upgrade Garmin Connect Mobile.
upgrade_needed_cancel — Button text for a user to cancel the dialog and not upgrade Garmin Connect Mobile.
 -->

    <string name="install_needed_title">Component missing.</string>
    <string name="install_needed_message">Connect IQ platform depends on Garmin Connect Mobile. Install?</string>
    <string name="install_needed_yes">Install</string>
    <string name="install_needed_cancel">Cancel</string>
    <string name="upgrade_needed_title">Component old.</string>
    <string name="upgrade_needed_message">Garmin Connect Mobile is not up-to-date. Update?</string>
    <string name="upgrade_needed_yes">Update</string>
    <string name="upgrade_needed_cancel">Cancel</string>

    <!-- activity types -->
    <string name="activity_type_walking">Walking</string>
    <string name="activity_type_nordic_walking">Nordic walking</string>
    <string name="activity_type_hiking">Hiking</string>
    <string name="activity_type_running">Running</string>
    <string name="activity_type_inline_skating">Inline skating</string>
    <string name="activity_type_road_cycling">Road cycling</string>
    <string name="activity_type_mtb" translatable="false">MTB</string>
    <string name="activity_type_scooter">Scooter</string>

    <string name="activity_type_cx_skiing">Cross country skiing</string>
    <string name="activity_type_downhill_skiing">Downhill skiing</string>
    <string name="activity_type_ski_mountaineering">Ski mountaineering</string>
    <string name="activity_type_snowshoeing">Snowshoeing</string>

    <string name="activity_type_sailing">Sailing</string>
    <string name="activity_type_canoeing">Canoeing</string>
    <string name="activity_type_kayaking">Kayaking</string>
    <string name="activity_type_rowing">Rowing</string>
    <string name="activity_type_swimming">Swimming</string>

    <string name="activity_type_horse">Horse riding</string>
    <string name="activity_type_boat">Boating</string>

    <string name="activity_type_car">Car</string>
    <string name="activity_type_jeep">Jeep</string>
    <string name="activity_type_motorcycle">Motorcycle</string>
    <string name="activity_type_truck">Truck</string>
    <string name="activity_type_public_transport">Public transport</string>

    <string name="activity_type_generic">Generic</string>

    <!-- menu main-->
    <string name="menu_custom_waypoints">Custom wpts.</string>

    <!-- menu view_results-->
    <string name="menu_share_standard">Share non CIQ</string>
    <string name="sharing_buffer_head">Sharing:</string>

    <!-- ExplainWaypointsActivity -->
    <string name="activity_explain_waypoints_label">OUT FIT - coursepoints</string>

    <string name="moreActionsEN" translatable="false">more actions</string>

</resources>
